@@ -136,6 +136,18 @@ class RepoFetcher(object):
             pb.update("Inserting stream")
             resume_tokens, missing_keys = self.sink.insert_stream(
                 stream, from_format, [])
+            if self.to_repository._fallback_repositories:
+                # Find all the parent revisions referenced by the stream, but
+                # not present in the stream, and make sure we have their
+                # inventories.
+                revision_ids = search.get_keys()
+                parent_maps = self.to_repository.get_parent_map(revision_ids)
+                parents = set()
+                map(parents.update, parent_maps.itervalues())
+                parents.difference_update(revision_ids)
+                parents.discard(NULL_REVISION)
+                missing_keys.update(
+                    ('inventories', rev_id) for rev_id in parents)
             if missing_keys:
                 pb.update("Missing keys")
                 stream = source.get_stream_for_missing_keys(missing_keys)
