@@ -1645,7 +1645,7 @@ class RemoteStreamSink(repository.StreamSink):
         if response[0][0] == 'missing-basis':
             tokens, missing_keys = bencode.bdecode_as_tuple(response[0][1])
             resume_tokens = tokens
-            return resume_tokens, missing_keys
+            return resume_tokens, set(missing_keys)
         else:
             self.target_repo.refresh_data()
             return [], set()
